--- a/useim-socials/index.html
+++ b/useim-socials/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <h2>Berrones</h2>
+    <h2>Natalia</h2>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
